Parul | Change speakers information

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         <h2>Speakers</h2>
     </div>
     <div>     
-     <img src="./img/speakers.png">
+     <img src="./img/2018Speakers.png">
     </div>
 </section>
 
