--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <p>Panel discussion - Digital payments are making banking services more accessible than ever<br>
                 <br>Panelists:<br><i><font size="4">
                 Tamaghna Basu, Co-founder and CTO, NeoEYED,<br> 
-                Lakshmanan C S, Advisory - Banking and Financial services,<br>
+                Lakshmanan C S, Advisory - Banking and Financial services, ThoughtWorks,<br>
                 Diwakar Kaushik, VP Products at GO-JEK<br>
                 <br></i></font>
                 Moderator:<br>
