--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta property="og:image" content="http://thoughtworks-bangalore.github.io/Converge/img/banner.jpg"/>
-    <title>Converge Bangalore - April 2018</title>
+    <title>Converge Bangalore - August 2019</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
@@ -45,7 +45,7 @@
         <div class="row countdown columns large-centered">
             <div class="small-4 large-4 columns date">
                 <p style="color:white;">5<sup>th</sup> edition</p>
-                <h4>July</h4>
+                <h4>August 24th</h4>
             </div>
             <div class="small-4 large-4 columns counter">
                 <h4><span id="days">&nbsp;</span></h4>
@@ -85,7 +85,7 @@
     <div class="fixed">
         <nav class="top-bar">
             <ul class="title-area">
-                <li class="name"><h1><a href="./">Converge Bangalore &raquo; <span>July</span></a></h1></li>
+                <li class="name"><h1><a href="./">Converge Bangalore &raquo; <span>August</span></a></h1></li>
                 <li class="toggle-topbar menu-icon"><a href="#"></a></li>
             </ul>
             <section class="top-bar-section">
@@ -159,7 +159,7 @@
     </div>
 </footer>
 
-<script>window.targetDate = new Date("April 22 2018")</script>
+<script>window.targetDate = new Date("August 24 2019")</script>
 <script src="js/ticker.js"></script>
 
 
