Updated the converage site content

--- a/index.html
+++ b/index.html
@@ -73,9 +73,38 @@
     </div>
 
     <div class="row">
-        <div class="large-12 columns" data-anchor-target="#_about">
-          <a href="#location" class="link"><i>Hope to see you soon @ ThoughtWorks, Bangalore</i></a>
-          </p><p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">For any further questions / suggestions write to us at:<br> <a href="mailto:converge-bangalore@thoughtworks.com" class="link"><em>converge-bangalore@thoughtworks.com</em></a></p>
+
+        <h4>First Principles Thinking</h4>
+        <br>
+        <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">
+                In a world that is dynamic and progressive, we are faced with new challenges every day. We need new, structured, innovative ways of unleashing creativity and solving these challenges.
+</p>
+
+        <br>
+        <p>How, you ask?
+                <br>
+                <br>
+                The answer is <b>First Principles Thinking</b>.
+
+        </p>
+        <br>
+
+        <p>
+                First Principles thinking is about breaking down a complex problem, questioning everything you think you know and then solving the problem bottom-up with the new knowledge. Elon Musk’s SpaceX and Tesla are a brilliant testament to this.
+        </p>
+        <br>
+        <p>
+                In this edition of Converge, you will get to hear from ideators, designers, analysts, and technologists who have applied <b>First Principles Thinking</b> to disrupt and innovate in their respective industries.
+        </p>
+        <br>
+        <p>
+                Join us at Converge 2019 on the 24th of August at the ThoughtWorks office in Koramangala, Bengaluru. The event is open for all, and we expect the audience to be a diverse group of engineers, designers, business analysts, product managers, and entrepreneurs.
+        </p>
+        <br>
+
+        <a href="#location" class="link"><i>We look forward to seeing you there!</i></a>
+        <br><br>
+        <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">​If you have any questions, you can send an email to: <br><br> <a href="mailto:converge-bangalore@thoughtworks.com" class="link"><em>converge-bangalore@thoughtworks.com</em></a></p>
         </div>
     </div>
 </section>
