--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
     <![endif]-->
 
 
-    <section id="intro" class="feature">
+    <section id="intro" class="feature feature-small">
         <div class="row logo">
             <div class="large-12 columns">
                 <a href="http://www.thoughtworks.com" target="_blank"
                    onclick="ga('send', 'event', 'tw', 'tw')">
                     <img src="./img/tw-logo-white.png" alt="ThoughtWorks" align="center" />
                 </a>
-                <h1 style="color:white;">Converge Bangalore</h1>
+                <h1 style="color:white;">Converge 2019 Bangalore</h1>
                 <p style="color:white;opacity:0.8;font-size:0.90em">Converge aims to bring together ideators, designers, analysts, solution providers, and technologists to connect, collaborate and learn from each other.</p>
             </div>
         </div>
@@ -45,11 +45,11 @@
         <div class="row countdown columns large-centered">
             <div class="small-4 large-4 columns date">
                 <p style="color:white;">5<sup>th</sup> edition</p>
-                <h4>August 24th</h4>
+                <h4>August 24<sup>th</sup></h4>
             </div>
             <div class="small-4 large-4 columns counter">
-                <h4><span id="days">&nbsp;</span></h4>
                 <p style="color:white;">Days</p>
+                <h4 class="couter-border-top"><span id="days">&nbsp;</span></h4>
             </div>
         </div>
 
@@ -143,34 +143,36 @@
     <div class="row">
         <div class="large-12 columns">
             <ul class="grid small-block-grid-3 large-block-grid-6">
-                    <li>
-                        <a href="./apr2018.html" target="_blank" data-bottom="transform:rotateZ(180deg) rotateY(90deg) scale(0);opacity:0;transform-origin:50% 0" data--150-bottom="transform:rotateZ(0deg) rotateY(0) scale(1);opacity:1">
-                            <div class="month">Apr</div>
-                            <div class="day">21</div>
-                            <div class="year">2018</div>
-                        </a>
-                    </li>
-                <li>
-                    <a href="./nov2016.html" target="_blank" data-bottom="transform:rotateZ(180deg) rotateY(90deg) scale(0);opacity:0;transform-origin:50% 0" data--150-bottom="transform:rotateZ(0deg) rotateY(0) scale(1);opacity:1">
-                        <div class="month">Nov</div>
-                        <div class="day">26</div>
-                        <div class="year">2016</div>
-                    </a>
-                </li>
-                <li>
-                    <a href="./nov2015.html" target="_blank" data-bottom="transform:rotateZ(180deg) rotateY(90deg) scale(0);opacity:0;transform-origin:50% 0" data--150-bottom="transform:rotateZ(0deg) rotateY(0) scale(1);opacity:1">
-                        <div class="month">Nov</div>
-                        <div class="day">28</div>
-                        <div class="year">2015</div>
-                    </a>
-                </li>
+
+
                 <li>
                     <a href="https://info.thoughtworks.com/RE15Q2INEVConvergePuneMay2015_converge-bangalore-november-8-registration.html" target="_blank" data-bottom="transform:rotateZ(180deg) rotateY(90deg) scale(0);opacity:0;transform-origin:50% 0" data--150-bottom="transform:rotateZ(0deg) rotateY(0) scale(1);opacity:1">
-                        <div class="month">Nov</div>
+                        <div class="month">2014</div>
                         <div class="day">08</div>
-                        <div class="year">2014</div>
+                        <div class="year">Nov</div>
                     </a>
                 </li>
+                <li>
+                        <a href="./nov2015.html" target="_blank" data-bottom="transform:rotateZ(180deg) rotateY(90deg) scale(0);opacity:0;transform-origin:50% 0" data--150-bottom="transform:rotateZ(0deg) rotateY(0) scale(1);opacity:1">
+                            <div class="month">2015</div>
+                            <div class="day">28</div>
+                            <div class="year">Nov</div>
+                        </a>
+                    </li>
+                    <li>
+                            <a href="./nov2016.html" target="_blank" data-bottom="transform:rotateZ(180deg) rotateY(90deg) scale(0);opacity:0;transform-origin:50% 0" data--150-bottom="transform:rotateZ(0deg) rotateY(0) scale(1);opacity:1">
+                                <div class="month">2016</div>
+                                <div class="day">26</div>
+                                <div class="year">Nov</div>
+                            </a>
+                        </li>
+                        <li>
+                                <a href="./apr2018.html" target="_blank" data-bottom="transform:rotateZ(180deg) rotateY(90deg) scale(0);opacity:0;transform-origin:50% 0" data--150-bottom="transform:rotateZ(0deg) rotateY(0) scale(1);opacity:1">
+                                    <div class="month">2018</div>
+                                    <div class="day">21</div>
+                                    <div class="year">Apr</div>
+                                </a>
+                            </li>
 
             </ul>
         </div>
