Some minor UI changes to site

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                    onclick="ga('send', 'event', 'tw', 'tw')">
                     <img src="./img/tw-logo-white.png" alt="ThoughtWorks" align="center" />
                 </a>
-                <h1 style="color:white;">Converge 2019 Bangalore</h1>
+                <h1 style="color:white;">Converge 2019, Bangalore</h1>
                 <p style="color:white;opacity:0.8;font-size:0.90em">Converge aims to bring together ideators, designers, analysts, solution providers, and technologists to connect, collaborate and learn from each other.</p>
             </div>
         </div>
