Added registration opening soon info

--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
         </div>
 
         <div class="row actions">
-
-
-
+            <p>Registrations opening soon.</p>
         </div>
+
     </section>
 
 <section id="about" class="feature">
