Added agenda & registration links & speakers list

--- a/index.html
+++ b/index.html
@@ -54,7 +54,22 @@
         </div>
 
         <div class="row actions">
-            <p>Registrations opening soon.</p>
+            <!-- <p>Registrations opening soon.</p> -->
+
+                <div class="large-5 columns speaker-list">
+
+                        <a href="#speaker_list"  rel="nofollow"
+                               onclick="ga('send', 'event', 'speaker_list', 'speaker_list')">
+                            <h4>Speakers</h4>
+                        </a>
+                </div>
+                <div class="large-5 columns participate">
+
+                        <a href="#agenda"  rel="nofollow">
+                            <h4>Agenda</h4>
+                        </a>
+                </div>
+
         </div>
 
     </section>
@@ -106,10 +121,286 @@
         <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">​If you have any questions, you can send an email to: <br><br> <a href="mailto:converge-bangalore@thoughtworks.com" class="link"><em>converge-bangalore@thoughtworks.com</em></a></p>
         </div>
     </div>
+
+</section>
+
+<section id="agenda" class="feature">
+    <div class="row" data-bottom="transform:translateY(-10em)" data--100-bottom="transform:translateY(0em)">
+        <h2>Agenda</h2>
+    </div>
+
+    <div class="timings">
+
+          <div class="row">
+            <div class="large-4 columns time" id="agenda-0"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                <p>
+                    8:30 AM
+                </p>
+            </div>
+            <div class="large-8 columns summary" data-anchor-target="#agenda-0"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                <p>Registration</p>
+
+            </div>
+          </div>
+
+     <div class="row">
+            <div class="large-4 columns time" id="agenda-1"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                <p>
+                    9:00 AM
+                </p>
+            </div>
+            <div class="large-8 columns summary" data-anchor-target="#agenda-1"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                <p>Event Kick Off<br><i><font size="4">by Anirvan Debabrata Lahiri (Product Manager at ThoughtWorks)</i></font></p>
+
+            </div>
+
+          </div>
+
+          <div class="row">
+            <div class="large-4 columns time" id="agenda-2"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                <p>
+                    9:30 AM
+                </p>
+            </div>
+            <div class="large-8 columns summary" data-anchor-target="#agenda-2"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                <p>Keynote Address: First Principles Thinking<br><i><font size="4">Anuj Rathi (Vice President of Product Management at Swiggy)</i></font></p></p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="large-4 columns time" id="agenda-3"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                <p>
+                    10:15 AM
+                </p>
+            </div>
+            <div class="large-8 columns summary" data-anchor-target="#agenda-3"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                <p>Data, Meet Homo Sapiens<br><i><font size="4">Ripul Kumar (Independent Consultant at Make My Trip)</i></font></p></p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="large-4 columns time" id="agenda-3"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                <p>
+                    11:00 AM
+                </p>
+            </div>
+            <div class="large-8 columns summary" data-anchor-target="#agenda-3"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                <p>Tea and Snacks</p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="large-4 columns time" id="agenda-4"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                <p>
+                    11:15 AM
+                </p>
+            </div>
+            <div class="large-8 columns summary" data-anchor-target="#agenda-4"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                 <p>Insights that Inspire Innovation<br><i><font size="4">Deepa Bacchu (Co-Founder and CEO at Pensar Design)</i></font></p></p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="large-4 columns time" id="agenda-5"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                <p>
+                    12:00 Noon
+                </p>
+            </div>
+            <div class="large-8 columns summary" data-anchor-target="#agenda-5"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                 <p>First Principles of Culture and Product<br><i><font size="4">Vikram Shenoy (Lead at India Digital Studios, Deloitte Digital)</i></font></p></p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="large-4 columns time" id="agenda-5"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                <p>
+                    12:45 PM
+                </p>
+            </div>
+            <div class="large-8 columns summary" data-anchor-target="#agenda-5"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                 <p>Making Digital Payments Ubiquitous<br><i><font size="4">Vinod Kumaar R (Lead Developer at ThoughtWorks)</i></font></p></p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="large-4 columns time" id="agenda-5"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                <p>
+                    1:00 PM
+                </p>
+            </div>
+            <div class="large-8 columns summary" data-anchor-target="#agenda-5"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                 <p>Lunch</p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="large-4 columns time" id="agenda-5"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                <p>
+                    1:45 PM
+                </p>
+            </div>
+            <div class="large-8 columns summary" data-anchor-target="#agenda-5"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                 <p>SLICE - The Experimentation Mindset<br><i><font size="4">Vishal Vinaykumar Prasad (Lead Business Analyst at ThoughtWorks)</i></font></p></p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="large-4 columns time" id="agenda-5"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                <p>
+                    2:30 PM
+                </p>
+            </div>
+            <div class="large-8 columns summary" data-anchor-target="#agenda-5"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                 <p>Applying AI in hyper-personalisation<br><i><font size="4">Sabitha Rajat (Business Analyst at ThoughtWorks)</i></font></p></p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="large-4 columns time" id="agenda-5"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                <p>
+                    2:45 PM
+                </p>
+            </div>
+            <div class="large-8 columns summary" data-anchor-target="#agenda-5"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                 <p>Closing and Break</p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="large-4 columns time" id="agenda-5"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                <p>
+                    3:00 PM
+                </p>
+            </div>
+            <div class="large-8 columns summary" data-anchor-target="#agenda-5"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                 <p>Workshop: Innovation in Product Thinking<br><i><font size="4"></i></font></p></p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="large-4 columns time" id="agenda-5"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                <p>
+                    5:00 PM
+                </p>
+            </div>
+            <div class="large-8 columns summary" data-anchor-target="#agenda-5"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                 <p>Networking</p>
+            </div>
+          </div>
+      </div>
+    </div>
+</section>
+
+<section id="speaker_list" class="speakerList" >
+    <div class="header">
+        <h2>Speakers</h2>
+    </div>
+    <div class="speakers-list-item speakers-list-item-initial">
+        <img src="./img/2019/anuj.jpg" />
+        <div class="speakers-list-description">
+            <h6>Anuj Rathi</h6>
+            <p>Vice President of Product Management at Swiggy</p>
+        </div>
+    </div>
+    <div class="speakers-list">
+        <div class="speakers-list-item"><img src="./img/2019/ripul.jpg" />
+            <div class="speakers-list-description">
+                <h6>Ripul Kumar</h6>
+                <p>Independent Consultant at Make My Trip</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2019/deepa.jpg" />
+            <div class="speakers-list-description">
+                <h6>Deepa Bacchu</h6>
+                <p>Co-Founder and CEO at Pensar Design</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2019/vikram.jpg" />
+            <div class="speakers-list-description">
+                <h6>Vikram Shenoy</h6>
+                <p>Lead at India Digital Studios, Deloitte Digital</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2019/vinod.jpg" />
+            <div class="speakers-list-description">
+                <h6>Vinod Kumaar R</h6>
+                <p>Lead Developer at ThoughtWorks</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2019/vishal.jpg" />
+            <div class="speakers-list-description">
+                <h6>Vishal Vinaykumar Prasad</h6>
+                <p>Lead Business Analyst at ThoughtWorks</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2019/sabitha.jpg" />
+            <div class="speakers-list-description">
+                <h6>Sabitha Rajat</h6>
+                <p>Business Analyst at ThoughtWorks)</p>
+            </div>
+        </div>
+
+    </div>
 </section>
 
 
-    <header id="header" class="feature">
+<header id="header" class="feature">
     <div class="fixed">
         <nav class="top-bar">
             <ul class="title-area">
@@ -124,7 +415,11 @@
                 </ul>
                 <ul class="right">
                     <li><a href="#about">About</a></li>
+                    <li><a href="#agenda">Agenda</a></li>
+                    <li> <a href="#speaker_list"  rel="nofollow">Speakers</a> </li>
+                    <li> <a href="#registration"  rel="nofollow">Registration</a> </li>
 
+                    <li><a href="#location">Location</a></li>
                     <li><a href="#archive">Previous Editions</a></li>
                 </ul>
             </section>
@@ -133,6 +428,35 @@
 </header>
 </center>
 
+<section id="registration" class="feature" >
+    <center>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSco127aB2KkpkEw5QYHcjXZF2IGTsBf8WFViN9TMD-InaSbWQ/viewform?embedded=true" width="640" height="1468" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    </center>
+</section>
+
+<section id="location" class="feature">
+    <div class="row" data-bottom="transform:translateY(-10em)" data--100-bottom="transform:translateY(0em)">
+        <br><h2>Location</h2>
+    </div>
+
+    <div class="row">
+        <div class="large-5 columns address" data--100-bottom-top="transform:translateX(-100%)" data--100-bottom="transform:translateX(0)">
+            <p>
+                <span>ThoughtWorks Technologies (India) Pvt. Ltd.</span>
+                <span>ACR Mansion G + 3floors 147/F, </span>
+                <span>8th Main,3<sup>rd</sup>Block Koramangala </span>
+                <span>Bangalore-560034 </span>
+                <span><small><a href="https://www.google.co.id/maps/dir//ThoughtWorks,+ACR+Mansion,+147%2FF,+8th+Main,+3rd+Block+Koramangala,+Koramangala+3+Block,+Koramangala,+Bengaluru,+Karnataka+560034,+India/@12.928731,77.6267284,17z/data=!4m13!1m4!3m3!1s0x3bae145e7228354d:0x116853ce31352ab1!2sThoughtWorks!3b1!4m7!1m0!1m5!1m1!1s0x3bae145e7228354d:0x116853ce31352ab1!2m2!1d77.6289171!2d12.9287258?hl=en" target="_blank" rel="nofollow">&laquo; Open in Google Maps &raquo;</a></small></span>
+            </p>
+        </div>
+
+        <div class="large-7 columns map" data-anchor-target=".address" data--100-bottom-top="transform:translateX(100%)" data--100-bottom="transform:translateX(0)">
+            <a href="https://www.google.co.id/maps/dir//ThoughtWorks,+ACR+Mansion,+147%2FF,+8th+Main,+3rd+Block+Koramangala,+Koramangala+3+Block,+Koramangala,+Bengaluru,+Karnataka+560034,+India/@12.928731,77.6267284,17z/data=!4m13!1m4!3m3!1s0x3bae145e7228354d:0x116853ce31352ab1!2sThoughtWorks!3b1!4m7!1m0!1m5!1m1!1s0x3bae145e7228354d:0x116853ce31352ab1!2m2!1d77.6289171!2d12.9287258?hl=en" target="_blank" rel="nofollow">
+                <img src="./img/map.png" alt="Map" align="center" />
+            </a>
+        </div>
+    </div>
+</section>
 
 <section id="archive" class="feature">
     <div class="row" data-bottom="transform:translateY(-10em)" data--100-bottom="transform:translateY(0em)">
